@@ -3,6 +3,11 @@ Changes in @NEW@:
     * Conary now attempts to provide hints about flavor combinations that would
       work if it cannot find a flavor that matches your exact request 
       (CNY-1920).
+  o Server Changes:
+    * Roles that have the mirror flag set no longer assume anonymous
+      fallback for trove access authentication (CNY-2473)
+
+
 Changes in 2.0.4:
   o Bug Fixes:
     * Moving an unmodified shadow to tip via cvc promote no longer causes
